plugins/static_analysis/static_analysis/src/main/java/io/jenkins/plugins/sample/res.txt
[*] Compiling loop.c
[*] Running ikos preprocessor
[*] Running ikos analyzer
[*] Translating LLVM bitcode to AR
[*] Running liveness analysis
[*] Running widening hint analysis
[*] Running interprocedural value analysis
[*] Analyzing entry point 'main'
[*] Checking properties for entry point 'main'

# Time stats:
clang        : 0.060 sec
ikos-analyzer: 0.009 sec
ikos-pp      : 0.007 sec

# Summary:
Total number of checks                : 6
Total number of unreachable checks    : 2
Total number of safe checks           : 3
Total number of definite unsafe checks: 1
Total number of warnings              : 0

The program is definitely UNSAFE

# Results
loop.c: In function 'main':
loop.c:7:14: error: division by zero
    	printf(i%0);
    	        ^
loop.c: In function 'main':
loop.c:5:30: unreachable: code is dead
    for (int i = 0; i < 10; i++){
                             ^
loop.c: In function 'main':
loop.c:9:1: unreachable: code is dead
}
^
